<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/rv_screenshots"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_active_screenshot"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_420dp"
                android:padding="@dimen/_16dp" />

            <TextView
                android:id="@+id/tv_collections_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/collections"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_collections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/tv_desc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_56dp"
                android:textSize="16sp"
                tools:text="@string/description" />
        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_screenshots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_90"
        android:orientation="horizontal"
        android:padding="@dimen/_16dp"
        app:layout_constraintBottom_toTopOf="@id/ll_actions"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/screenshot_item_view" />

    <LinearLayout
        android:id="@+id/ll_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/baseline_arrow_upward_24"
            android:gravity="center"
            android:paddingVertical="@dimen/_16dp"
            android:text="@string/share"
            android:textColor="@color/grey_variant_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/outline_info_24"
            android:gravity="center"
            android:paddingVertical="@dimen/_16dp"
            android:text="@string/info"
            android:textColor="@color/grey_variant_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/baseline_delete_24"
            android:gravity="center"
            android:paddingVertical="@dimen/_16dp"
            android:text="@string/delete"
            android:textColor="@color/grey_variant_1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>